# dummy_roscpp

./: CMakeLists.txt  package.xml
src/: dummy.cpp  dummy.h  dummy_roscpp.cpp
